fix overflow

--- a/src/styles/Detail.module.css
+++ b/src/styles/Detail.module.css
@@ -8,7 +8,12 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  left: 0;
 }
 .content {
   text-align: justify;
+  overflow: auto;
 }
